{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 3101,
  "lineage": "3260b5bd-c736-0485-9a54-7981daa389af",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "eks_control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381492135989:security-group/sg-0554de2fe3663317b",
            "description": "EKS created security group applied to ENI that is attached to EKS Control Plane master nodes, as well as any managed workloads.",
            "filter": null,
            "id": "sg-0554de2fe3663317b",
            "name": "eks-cluster-sg-mpfefferle-677491768",
            "tags": {
              "Name": "eks-cluster-sg-mpfefferle-677491768",
              "kubernetes.io/cluster/mpfefferle": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8e8a285f7ffc0e2"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0595b668e1d599ea8",
            "association_id": "eipassoc-05276d0733c6c3c47",
            "domain": "vpc",
            "id": "eipalloc-0595b668e1d599ea8",
            "network_border_group": "us-east-2",
            "network_interface": "eni-08e2893730d67a452",
            "private_dns": "ip-10-0-0-243.us-east-2.compute.internal",
            "private_ip": "10.0.0.243",
            "public_dns": "ec2-3-143-48-175.us-east-2.compute.amazonaws.com",
            "public_ip": "3.143.48.175",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "weka_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381492135989:internet-gateway/igw-03938cb7d705f23dc",
            "id": "igw-03938cb7d705f23dc",
            "owner_id": "381492135989",
            "vpc_id": "vpc-0e8e8a285f7ffc0e2"
          },
          "dependencies": [
            "aws_vpc.weka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0595b668e1d599ea8",
            "association_id": "eipassoc-05276d0733c6c3c47",
            "connectivity_type": "public",
            "id": "nat-08b4e2aed82132af1",
            "network_interface_id": "eni-08e2893730d67a452",
            "private_ip": "10.0.0.243",
            "public_ip": "3.143.48.175",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-013269d1760aa6f41"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.weka_igw",
            "aws_subnet.public",
            "aws_vpc.weka_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "weka_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381492135989:route-table/rtb-0f66bc08151ae9447",
            "id": "rtb-0f66bc08151ae9447",
            "owner_id": "381492135989",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03938cb7d705f23dc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e8e8a285f7ffc0e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.weka_igw",
            "aws_vpc.weka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "weka_subnet1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00028efd5a09a4bc4",
            "route_table_id": "rtb-0f66bc08151ae9447",
            "subnet_id": "subnet-0e6384b4944b2087f"
          },
          "dependencies": [
            "aws_internet_gateway.weka_igw",
            "aws_route_table.weka_route_table",
            "aws_subnet.weka_subnet1",
            "aws_vpc.weka_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "weka_subnet2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8043491b1aa2aa9",
            "route_table_id": "rtb-0f66bc08151ae9447",
            "subnet_id": "subnet-015bd3a3f73268e22"
          },
          "dependencies": [
            "aws_internet_gateway.weka_igw",
            "aws_route_table.weka_route_table",
            "aws_subnet.weka_subnet2",
            "aws_vpc.weka_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_worker_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381492135989:security-group/sg-0aade829fc6075fa0",
            "description": "EKS worker nodes security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aade829fc6075fa0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0554de2fe3663317b"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "weka-mpfefferle-eks-worker-nodes",
            "name_prefix": "",
            "owner_id": "381492135989",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e8e8a285f7ffc0e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.weka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_traffic_between_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 0,
            "id": "sgrule-2280609423",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0aade829fc6075fa0",
            "security_group_rule_id": "sgr-0df782d46c757fda4",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_worker_nodes",
            "aws_vpc.weka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_control_plane_to_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 1025,
            "id": "sgrule-303800791",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0aade829fc6075fa0",
            "security_group_rule_id": "sgr-0e4764e5272972f6c",
            "self": false,
            "source_security_group_id": "sg-0554de2fe3663317b",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_iam_role.eks_role",
            "aws_iam_role_policy_attachment.weka-AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.weka-AmazonEKSVPCResourceController",
            "aws_security_group.eks_worker_nodes",
            "aws_subnet.public",
            "aws_subnet.weka_subnet1",
            "aws_subnet.weka_subnet2",
            "aws_vpc.weka_vpc",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role",
            "data.aws_security_group.eks_control_plane"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-274067599",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0554de2fe3663317b",
            "security_group_rule_id": "sgr-0d549790ef96b7888",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_iam_role.eks_role",
            "aws_iam_role_policy_attachment.weka-AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.weka-AmazonEKSVPCResourceController",
            "aws_subnet.public",
            "aws_subnet.weka_subnet1",
            "aws_subnet.weka_subnet2",
            "aws_vpc.weka_vpc",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role",
            "data.aws_security_group.eks_control_plane"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_weka",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24",
              "10.0.2.0/24"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2388478854",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0554de2fe3663317b",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_iam_role.eks_role",
            "aws_iam_role_policy_attachment.weka-AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.weka-AmazonEKSVPCResourceController",
            "aws_subnet.public",
            "aws_subnet.weka_subnet1",
            "aws_subnet.weka_subnet2",
            "aws_vpc.weka_vpc",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role",
            "data.aws_security_group.eks_control_plane"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_worker_to_control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 1025,
            "id": "sgrule-3476832898",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0554de2fe3663317b",
            "security_group_rule_id": "sgr-027ce15c4b370a4e7",
            "self": false,
            "source_security_group_id": "sg-0aade829fc6075fa0",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_iam_role.eks_role",
            "aws_iam_role_policy_attachment.weka-AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.weka-AmazonEKSVPCResourceController",
            "aws_security_group.eks_worker_nodes",
            "aws_subnet.public",
            "aws_subnet.weka_subnet1",
            "aws_subnet.weka_subnet2",
            "aws_vpc.weka_vpc",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role",
            "data.aws_security_group.eks_control_plane"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_worker_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3504244178",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0aade829fc6075fa0",
            "security_group_rule_id": "sgr-068f2f7c4bfb5b4c3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_worker_nodes",
            "aws_vpc.weka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381492135989:subnet/subnet-013269d1760aa6f41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013269d1760aa6f41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492135989",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "weka_public_subnet"
            },
            "tags_all": {
              "Name": "weka_public_subnet"
            },
            "vpc_id": "vpc-0e8e8a285f7ffc0e2"
          },
          "dependencies": [
            "aws_vpc.weka_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "weka_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381492135989:subnet/subnet-0e6384b4944b2087f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6384b4944b2087f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492135989",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "weka_subnet1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "weka_subnet1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e8e8a285f7ffc0e2"
          },
          "dependencies": [
            "aws_vpc.weka_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "weka_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381492135989:subnet/subnet-015bd3a3f73268e22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015bd3a3f73268e22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492135989",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "weka_subnet2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "weka_subnet2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e8e8a285f7ffc0e2"
          },
          "dependencies": [
            "aws_vpc.weka_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "weka_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381492135989:vpc/vpc-0e8e8a285f7ffc0e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ce53c94c41c6046e",
            "default_route_table_id": "rtb-0f5bad046855d2156",
            "default_security_group_id": "sg-02dfe7501caeb4c76",
            "dhcp_options_id": "dopt-0af91fbd6869ed4e5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e8e8a285f7ffc0e2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f5bad046855d2156",
            "owner_id": "381492135989",
            "tags": {
              "Name": "mpfefferle-vpc"
            },
            "tags_all": {
              "Name": "mpfefferle-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.weka",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381492135989:subnet/subnet-0e6384b4944b2087f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "available_ip_address_count": 192,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6384b4944b2087f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492135989",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "weka_subnet1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e8e8a285f7ffc0e2"
          }
        }
      ]
    },
    {
      "module": "module.weka",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:381492135989:loadbalancer/app/weka-mpfefferle-lb/fa382eb8b14c9793",
            "arn_suffix": "app/weka-mpfefferle-lb/fa382eb8b14c9793",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-weka-mpfefferle-lb-129932950.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:381492135989:loadbalancer/app/weka-mpfefferle-lb/fa382eb8b14c9793",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "weka-mpfefferle-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0554de2fe3663317b",
              "sg-0aade829fc6075fa0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-015bd3a3f73268e22"
              },
              {
                "subnet_id": "subnet-0e6384b4944b2087f"
              }
            ],
            "subnets": [
              "subnet-015bd3a3f73268e22",
              "subnet-0e6384b4944b2087f"
            ],
            "tags": {
              "Name": "weka-mpfefferle-lb",
              "cluster_name": "mpfefferle"
            },
            "tags_all": {
              "Name": "weka-mpfefferle-lb",
              "cluster_name": "mpfefferle"
            },
            "vpc_id": "vpc-0e8e8a285f7ffc0e2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_iam_role.eks_role",
            "aws_iam_role_policy_attachment.weka-AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.weka-AmazonEKSVPCResourceController",
            "aws_security_group.eks_worker_nodes",
            "aws_subnet.public",
            "aws_subnet.weka_subnet1",
            "aws_subnet.weka_subnet2",
            "aws_vpc.weka_vpc",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role",
            "data.aws_security_group.eks_control_plane",
            "module.weka.module.network.aws_eip.nat_eip",
            "module.weka.module.network.aws_internet_gateway.ig",
            "module.weka.module.network.aws_nat_gateway.nat",
            "module.weka.module.network.aws_route_table.ig_route_table",
            "module.weka.module.network.aws_route_table.nat_route_table",
            "module.weka.module.network.aws_route_table_association.private_rt_associate",
            "module.weka.module.network.aws_route_table_association.public_rt_associate",
            "module.weka.module.network.aws_subnet.private_subnet",
            "module.weka.module.network.aws_subnet.public_subnet",
            "module.weka.module.network.aws_vpc.vpc",
            "module.weka.module.network.data.aws_availability_zones.available",
            "module.weka.module.security_group.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.weka",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:381492135989:listener/app/weka-mpfefferle-lb/fa382eb8b14c9793/d0144a2fc496b549",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:381492135989:targetgroup/weka-mpfefferle-lb-target-group/e82b204dc844989c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:381492135989:listener/app/weka-mpfefferle-lb/fa382eb8b14c9793/d0144a2fc496b549",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:381492135989:loadbalancer/app/weka-mpfefferle-lb/fa382eb8b14c9793",
            "mutual_authentication": [],
            "port": 14000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "weka-mpfefferle-lb-listener"
            },
            "tags_all": {
              "Name": "weka-mpfefferle-lb-listener"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_iam_role.eks_role",
            "aws_iam_role_policy_attachment.weka-AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.weka-AmazonEKSVPCResourceController",
            "aws_security_group.eks_worker_nodes",
            "aws_subnet.public",
            "aws_subnet.weka_subnet1",
            "aws_subnet.weka_subnet2",
            "aws_vpc.weka_vpc",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role",
            "data.aws_security_group.eks_control_plane",
            "module.weka.aws_lb.alb",
            "module.weka.aws_lb_target_group.alb_target_group",
            "module.weka.module.network.aws_eip.nat_eip",
            "module.weka.module.network.aws_internet_gateway.ig",
            "module.weka.module.network.aws_nat_gateway.nat",
            "module.weka.module.network.aws_route_table.ig_route_table",
            "module.weka.module.network.aws_route_table.nat_route_table",
            "module.weka.module.network.aws_route_table_association.private_rt_associate",
            "module.weka.module.network.aws_route_table_association.public_rt_associate",
            "module.weka.module.network.aws_subnet.private_subnet",
            "module.weka.module.network.aws_subnet.public_subnet",
            "module.weka.module.network.aws_vpc.vpc",
            "module.weka.module.network.data.aws_availability_zones.available",
            "module.weka.module.security_group.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.weka",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:381492135989:targetgroup/weka-mpfefferle-lb-target-group/e82b204dc844989c",
            "arn_suffix": "targetgroup/weka-mpfefferle-lb-target-group/e82b204dc844989c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/v2/healthcheck/",
                "port": "14000",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:381492135989:targetgroup/weka-mpfefferle-lb-target-group/e82b204dc844989c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "weka-mpfefferle-lb-target-group",
            "port": 14000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "weka-mpfefferle-lb-target-group"
            },
            "tags_all": {
              "Name": "weka-mpfefferle-lb-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e8e8a285f7ffc0e2"
          },
          "dependencies": [
            "aws_subnet.weka_subnet1",
            "aws_vpc.weka_vpc",
            "data.aws_availability_zones.available",
            "module.weka.module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.weka",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretmanager_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381492135989:vpc-endpoint/vpce-0f53ac8c5e2286a3e",
            "dns_entry": [
              {
                "dns_name": "vpce-0f53ac8c5e2286a3e-ibjbvfp8.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0f53ac8c5e2286a3e-ibjbvfp8-us-east-2a.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "secretsmanager.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z00445848MM83ZX6GIHF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f53ac8c5e2286a3e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01594bcd1c051e4ec"
            ],
            "owner_id": "381492135989",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0554de2fe3663317b",
              "sg-0aade829fc6075fa0"
            ],
            "service_name": "com.amazonaws.us-east-2.secretsmanager",
            "state": "available",
            "subnet_ids": [
              "subnet-0e6384b4944b2087f"
            ],
            "tags": {
              "Environment": "weka",
              "Name": "weka-secretmanager-endpoint"
            },
            "tags_all": {
              "Environment": "weka",
              "Name": "weka-secretmanager-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e8e8a285f7ffc0e2"
          },
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_iam_role.eks_role",
            "aws_iam_role_policy_attachment.weka-AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.weka-AmazonEKSVPCResourceController",
            "aws_security_group.eks_worker_nodes",
            "aws_subnet.public",
            "aws_subnet.weka_subnet1",
            "aws_subnet.weka_subnet2",
            "aws_vpc.weka_vpc",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role",
            "data.aws_security_group.eks_control_plane",
            "module.weka.data.aws_region.current",
            "module.weka.module.network.aws_eip.nat_eip",
            "module.weka.module.network.aws_internet_gateway.ig",
            "module.weka.module.network.aws_nat_gateway.nat",
            "module.weka.module.network.aws_route_table.ig_route_table",
            "module.weka.module.network.aws_route_table.nat_route_table",
            "module.weka.module.network.aws_route_table_association.private_rt_associate",
            "module.weka.module.network.aws_route_table_association.public_rt_associate",
            "module.weka.module.network.aws_subnet.private_subnet",
            "module.weka.module.network.aws_subnet.public_subnet",
            "module.weka.module.network.aws_vpc.vpc",
            "module.weka.module.network.data.aws_availability_zones.available",
            "module.weka.module.security_group.aws_security_group.sg"
          ]
        }
      ]
    }
  ]
}